--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
-    "next": "14.2.8",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
